# eventStar_Buy-tickets

./: .gitignore  README.md  walkthrough.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/event-manager/: Cargo.toml
contracts/event-manager/src/: lib.rs
contracts/loyalty-token/: Cargo.toml
contracts/loyalty-token/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Navbar.tsx
frontend/src/context/: StellarContext.tsx
frontend/src/utils/: soroban.ts
