[package]
name = "event-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
loyalty-token = { path = "../loyalty-token" }
arbitrary = { version = "=1.2.3", features = ["derive"] }
